deployment/shroff-data/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shroff-data
  labels:
    name: shroff-data
